--- a/arcane-2.css
+++ b/arcane-2.css
@@ -661,12 +661,20 @@ a:hover {
    margin: 0 5%;
 }
 
+.showcase .content .des{
+    position: relative;
+    text-align: center;
+    padding-bottom: 15px;
+}
+
 @media screen and (max-width: 900px) {
    .showcase {
        height: 90vh !important;
    }
 }
 
+
+/* Carousel */
 /* Carousel */
 .carousel {
     width: 100%;
@@ -693,6 +701,7 @@ a:hover {
     margin-bottom: 5px;
     flex-basis: 100%;
     transition: all 0.6s ease-in-out;
+    cursor: pointer; /* Add pointer cursor to main video */
 }
  
 .slide video:not(:nth-child(1)) {
@@ -701,6 +710,7 @@ a:hover {
     z-index: 120;
     margin: 0 5px;
     transition: all 0.6s ease-in-out;
+    cursor: pointer; /* Add pointer cursor to indicate clickability */
 }
  
 .slide video:nth-child(n+5) {
@@ -711,8 +721,8 @@ a:hover {
  
 .carousel button {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 27.5vh; 
+    transform: translateY(-50%); 
     z-index: 140;
     width: 30px;
     height: 30px;
@@ -721,12 +731,21 @@ a:hover {
     border: 1px rgb(200, 155, 60) solid;
     cursor: pointer;
     border-radius: 50%;
-    display: flex;
+    display: none; /* Hide buttons by default */
     align-items: center;
     justify-content: center;
     font-size: 18px;
 }
- 
+
+@media screen and (min-width:1001px){
+    .carousel{
+        height: 77vh;
+    }
+    .showcase-BG-img{
+        height: 105vh;
+    }
+}
+
 .carousel button:first-of-type {
     left: 10px;
 }
@@ -738,16 +757,16 @@ a:hover {
 .carousel button:hover {
     background-color: rgba(200, 155, 60, 0.8);
 }
+
+/* Show buttons only on smaller screens */
 @media screen and (max-width:1000px){
+    .carousel button {
+        display: flex; /* Show buttons on smaller screens */
+    }
     .slide video:not(:nth-child(1)) {
         display: none;
     }
     .carousel{
         height: 60vh;
-    }
-}
-@media screen and (min-width:1001px){
-    .showcase-BG-img{
-        height: 105vh;
     }
 }
