--- a/arcane-2.css
+++ b/arcane-2.css
@@ -597,44 +597,12 @@ a:hover {
     margin: 0 auto;
 }
 
-/* showcase */
-.showcase {
-    height: 85vh !important;
-    width: 100vw;
-    margin: 0;
-    position: relative;
-    z-index: 1;
- }
- 
- .showcase-BG-img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('https://d2w9rnfcy7mm78.cloudfront.net/35690513/original_7a6126b4915806b6fed3622263c4ea5b.png?1743548958?bc=0');
-    background-color: rgba(1, 10, 19, 0.8);
-    background-blend-mode: overlay;
-    background-size: cover;
-    background-position: center;
-    z-index: -1;
- }
- 
- .showcase .content {
-    position: relative;
-    padding: 50px 0;
-    margin: 0 5%;
- }
- 
- @media screen and (max-width: 900px) {
-    .showcase {
-        height: 90vh !important;
-    }
- }
+
+
  
 /* Original showcase styles */
 .showcase {
-   height: 85vh !important;
+   height: 103vh !important;
    width: 100vw;
    margin: 0;
    position: relative;
@@ -645,8 +613,8 @@ a:hover {
    position: absolute;
    top: 0;
    left: 0;
-   width: 100%;
-   height: 100%;
+   width: 100vw;
+   height: 110vh;
    background-image: url('https://d2w9rnfcy7mm78.cloudfront.net/35690513/original_7a6126b4915806b6fed3622263c4ea5b.png?1743548958?bc=0');
    background-color: rgba(1, 10, 19, 0.8);
    background-blend-mode: overlay;
@@ -673,8 +641,6 @@ a:hover {
    }
 }
 
-
-/* Carousel */
 /* Carousel */
 .carousel {
     width: 100%;
@@ -741,9 +707,6 @@ a:hover {
     .carousel{
         height: 77vh;
     }
-    .showcase-BG-img{
-        height: 105vh;
-    }
 }
 
 .carousel button:first-of-type {
@@ -761,21 +724,83 @@ a:hover {
 /* Show buttons only on smaller screens */
 @media screen and (max-width:1000px){
     .carousel button {
-        display: flex; /* Show buttons on smaller screens */
+        display: flex;
     }
     .slide video:not(:nth-child(1)) {
         display: none;
     }
     .carousel{
-        height: 60vh;
+        height: auto;
+    }
+    .showcase{
+        height: 90vh !important;
+    }
+    .showcase-BG-img{
+        height: 100vh;
     }
 }
 
 /* footer */
-footer .content{
+footer {
+    width: 100vw;
+    height: 10vh;
     position: relative;
+    margin-top: 20px;
+    background-color: rgb(1, 10, 19);
+    border-top: 1px solid rgb(200, 155, 60);
+    padding: 20px 0;
+    z-index: 10;
 }
-footer .content .images-footer img{
-    width: 3em;
-    height: auto;
+
+footer .content {
+    position: relative;
+    display: flex;
+    margin-right: 5%;
+    margin-left: 5%;
+}
+
+footer .content .des{
+    width: 100%;
+    position: relative;
+    color: rgb(240, 230, 210);
+}
+
+footer .content .des#show-des{
+    width: 100%;
+    position: relative;
+    color: rgb(240, 230, 210);
+    display: none;
+}
+
+footer .links {
+    padding: 15px 0;
+    width: 100%;
+    position: relative;
+    display: none;
+}
+
+footer .links a{
+    padding: 0 10px;
+}
+
+footer .images-footer {
+    display: none;
+    padding: 10px;
+}
+
+footer .images-footer img{
+    height: 1.5em;
+    width: auto;
+}
+
+/* Ensure footer is visible at all screen sizes */
+@media screen and (max-width: 900px) {
+    footer .links,
+    footer .images-footer,
+    footer .content .des#show-des{
+        display: inline-block;
+    }
+    footer .content .des{
+        display: none;
+    }
 }
