--- a/arcane-2.css
+++ b/arcane-2.css
@@ -777,6 +777,7 @@ footer .links {
     width: 100%;
     position: relative;
     display: none;
+    font-size: 15px !important;
 }
 
 footer .links a{
